@@ -1749,9 +1749,8 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 - (void) _updateDisplayThread: (void *) incoming
 {
 	NSAutoreleasePool *arPool = [[NSAutoreleasePool alloc] init];
-	int i, n, iterationCount;
+	int iterationCount;
 	NSAutoreleasePool *pool = nil;
-	PTYSession *aSession;
 	
 	iterationCount = 0;
 	while (EXIT == NO)
@@ -1762,12 +1761,10 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 		if(pool == nil)
 			pool = [[NSAutoreleasePool alloc] init];
 		
-		n = [_sessionMgr numberOfSessions];
-		for (i = 0; i < n; i++)
-		{
-			aSession = [_sessionMgr sessionAtIndex: i];
-			[aSession updateDisplay];
-		}
+		
+		// update current session display
+		[[self currentSession] updateDisplay];
+		
 		
 		// periodically create and release autorelease pools
 		if((iterationCount % 50) == 0)
@@ -1777,7 +1774,7 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 			iterationCount = 0;
 		}
 			
-		usleep(30000);
+		usleep(15000);
 	}
 	
 	if(pool != nil)
